--- a/dev/scss/sections/index/_discription.scss
+++ b/dev/scss/sections/index/_discription.scss
@@ -5,7 +5,7 @@
     background-color: black;
     color: var(--title);
 
-    padding: 20px 100px 0px;
+    padding: 20px 50px 0px;
 
     @include md{
         padding: 20px 100px 0;
